Reverted changes in 'fixed z-index for ready to mashout sidebar;' so that sidebar is on top of fancyboxes once again. Removed empty view file, and moved fancybox closer to links in markup.

--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -1068,7 +1068,7 @@ h4 span.counter {
     left: 0;
     width: 307px;
     padding: 5px;
-    z-index: 50; }
+    z-index: 1337; }
 
 #content-wrapper #sidebar #ready-to-mashout .button {
     padding: 5px 3px; }
